@@ -7,12 +7,18 @@
 
 //==============================================================================
 
+class TimeMaker;
+
 class AEVMlSucker;
 
 //------------------------------------------------------------------------------
 
 AEVMlSucker   *ml_sucker = 0;
 ZNameMap      *sites     = 0;
+Eventor       *animator  = 0;
+TimeMaker     *timemaker = 0;
+
+const Int_t g_rps = 60;
 
 //==============================================================================
 
@@ -30,9 +36,15 @@ void suck()
 
   ASSIGN_ADD_GLASS(sites, AEVSiteList, aev_queen, "Sites", 0);
 
+  ASSIGN_ADD_GLASS(animator, Eventor, aev_queen, "Animator", 0);
+
+  ASSIGN_ADD_GLASS(timemaker, TimeMaker, animator, "Animation TimeMaker", 0);
+
   //============================================================================
 
   alienviz_setup_scene();
+
+  //----------------------------------------------------------------------------
 
   CREATE_ADD_GLASS(c_mapviz, AEVMapViz, g_scene, "MapViz", 0);
   c_mapviz->SetPos(0, -3, 0);
@@ -46,11 +58,42 @@ void suck()
   AEVMapViz* m_mapviz = mercator_map();
   m_mapviz->SetSites(sites);
 
+  //----------------------------------------------------------------------------
+
+  CREATE_ADD_GLASS(gled_viz_node, ZNode, aev_scene, "GledNode", 0);
+  gled_viz_node->SetPos(0, -3, 5);
+  gled_viz_node->SetRnrMod(find_rnrmod("NamesOn"));
+  CREATE_ADD_GLASS(gled_viz, WSSeed, gled_viz_node, "Central Services", 0);
+  // Could move it somewhat and rotate it in parent frame.
+  gled_viz->SetPos(0, 0, 0);
+  gled_viz->RotateLF(3, 1, 0.35*TMath::Pi());
+  gled_viz->SetRnrMod(find_rnrmod("NamesOff"));
+  gled_viz->SetTexture(find_texture("Gled"));
+  gled_viz->MakeLissajou(0, TMath::TwoPi(), 16,
+			 0.5, 2, 0,
+			 0.5, 3, 0,
+			 0.5, 2, TMath::Pi()/2,
+			 0.1);
+  gled_viz->SetDtexU(0.05);
+  gled_viz->SetRenormLen(true);
+
+  timemaker->AddClient(gled_viz);
+
+  CREATE_ADD_GLASS(gled_rot, Mover, animator, "Gled Rotator", 0);
+  gled_rot->SetRi(1);
+  gled_rot->SetRj(2);
+  gled_rot->SetRa(0.03);
+  gled_rot->SetNode(gled_viz);
+
   //============================================================================
 
   alienviz_spawn_eye();
 
   //============================================================================
 
+  animator->SetInterBeatMS(TMath::Nint(1000.0/g_rps));
+  animator->Start();
+
+  // ml_sucker->SetSuckCmd("cat nc-dump");
   ml_sucker->StartSucker();
 }
